
- Better fault tolerance when killing processes using Python < 2.6 via
  utilities.baseconverter._ProcTimeout

- Made the name of the logo image configurable (so that it can be a PNG
  rather than a GIF).

- LP #398940, LP #398951: Added spelling checker for TinyMCE editor.  This
  requires the ``aspell`` command.  Please see the buildout README.txt for
  instructions on installing Aspell.

3.5.1 (2009-07-17)
------------------

- LP #400767: Fixed AttributeError on activity listings.

3.5 (2009-07-16)
----------------

- LP #383666: Paste from Word to blog posts emails content but drops from
  blogentry

- LP #398914: Scale and crop uploaded profile photos to fit 75 x 100.
  The original image uploads are available under the name
  "source_photo", for example, /profiles/admin/source_photo .

- LP #390767: In the recent activity list, show the person who edited,
  rather than the original creator.

- LP #396581: Most links to a comment should show the comment in context.

- LP #397196: Added a page that links to admin tools (/static/admin.html)

- Updated paster template.

- LP #399396: Fix styling on list items.

- LP #399408: Reformat Network Events portlet to better display long titles

3.4 (2009-07-09)
----------------

- LP #394355: Don't commit changes to sqlite "pending messages" table if
  ZODB raises a conflict error.

- LP #391264: Added an administrator-level user edit view.

- LP #391259: Added an administrator-level user add view.

- LP #397030: Use quarantine for messages that fail to process during mail-in.

- Got rid kludgy '.error' file for mail-in, since the quarantine renders it
  obsolete.

3.3 (2009-07-06)
----------------

- Add fault tolerance to mail-in for message bodies with unknown non-unicode
  character encodings.

- Add a ``karl_project`` paster template (unfinished) in order to
  bootstrap a KARL customization.  The code used is an amalgam of
  Tres' ``non_osi_template`` package updated with recent changes to
  the OSI package.
